--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ layout: home
     </div>
   </div>
 
-  <div class="min-h-[250px] flex flex-col items-start sm:flex-row bg-gagnef-orange-500">
+  <div class="min-h-[250px] flex flex-col-reverse items-start sm:flex-row bg-gagnef-orange-500">
     <div class="flex sm:w-1/2 sm:self-center sm:justify-center min-h-[300px] py-12">
       <div class="flex flex-col w-full justify-center sm:w-auto p-4 sm:max-w-[420px]">
         <div class="text-4xl sm:text-6xl font-bold text-black">BRYGGERIET</div>
@@ -33,7 +33,7 @@ layout: home
     </div>
   </div>
 
-  <div class="flex flex-col-reverse items-start sm:flex-row bg-gagnef-moss-500">
+  <div class="flex flex-col items-start sm:flex-row bg-gagnef-moss-500">
     <div class="flex w-full sm:w-1/2 bg-[url(/assets/images/bg_solshea.webp)] bg-cover">
       <a href="/beers/solshea" class="flex justify-center self-center w-full h-full p-4 backdrop-blur-sm">
         <picture>
@@ -55,7 +55,7 @@ layout: home
     </div>
   </div>
 
-  <div class="flex flex-col items-start sm:flex-row bg-gagnef-green-300">
+  <div class="flex flex-col-reverse items-start sm:flex-row bg-gagnef-green-300">
     <div class="flex sm:w-1/2 sm:self-center sm:justify-center min-h-[300px] py-12">
       <div class="flex flex-col w-full justify-center sm:w-auto p-4 sm:max-w-[420px]">
         <div class="text-4xl sm:text-6xl font-bold text-white">VANLIG</div>
@@ -77,7 +77,7 @@ layout: home
     </div>
   </div>
 
-  <div class="flex flex-col-reverse items-start sm:flex-row bg-gagnef-yellow-500">
+  <div class="flex flex-col items-start sm:flex-row bg-gagnef-yellow-500">
     <div class="flex w-full sm:w-1/2 bg-[url(/assets/images/bg_humlig.webp)] bg-cover">
       <a href="/beers/humlig" class="flex justify-center self-center w-full h-full p-4 backdrop-blur-sm">
         <picture>
@@ -99,7 +99,7 @@ layout: home
     </div>
   </div>
 
-  <div class="flex flex-col items-start sm:flex-row bg-gagnef-pink-500">
+  <div class="flex flex-col-reverse items-start sm:flex-row bg-gagnef-pink-500">
     <div class="flex sm:w-1/2 sm:self-center sm:justify-center min-h-[300px] py-12">
       <div class="flex flex-col w-full justify-center sm:w-auto p-4 sm:max-w-[420px]">
         <div class="text-4xl sm:text-6xl font-bold text-black">FOLKLIG</div>
